blueprints/ente-web/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ente-web
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: ente-web
          image: ghcr.io/meysam81/ente-docker/ente-photos
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: photos
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          name: photos
          ports:
            - containerPort: 8080
              name: photos
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: photos
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: Always
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups: []
        sysctls: []
      serviceAccountName: ente-web
      terminationGracePeriodSeconds: 10
