blueprints/ente-web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ente-web
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: photos
      name: http
