blueprints/ente-web/ciliumnetworkpolicy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ente-web
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http: [{}]
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: victoria-metrics-k8s-stack
            k8s:app.kubernetes.io/name: vmagent
            k8s:io.cilium.k8s.policy.serviceaccount: vmagent-victoria-metrics-k8s-stack
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http: [{}]
